# Lanswitch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-macos.yml  release.yml
core/: Cargo.toml
core/src/: commands.rs  discover.rs  lib.rs  presets.rs  types.rs  validate.rs
docs/: DISTRIBUTION.md  PRIVILEGED-HELPER.md
helper/: Cargo.toml
helper/src/: main.rs
packaging/macos/: com.lanswitch.helper.plist
packaging/windows/: install-helper-service.ps1  nsis-hooks.nsh  uninstall-helper-service.ps1
scripts/: build-release.ps1  build-release.sh  prepare-binaries.ps1  prepare-binaries.sh  publish-github.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: helper_client.rs  lib.rs  main.rs
ui/: presets.default.json  settings.html  settings.js  styles.css
